--- a/modules/MailServerPortlet/build.gradle
+++ b/modules/MailServerPortlet/build.gradle
@@ -11,6 +11,8 @@ dependencies {
 	// compileOnly group: "javax.servlet", name: "javax.servlet-api"
 	compileOnly group: 'jakarta.mail', name: 'jakarta.mail-api', version: "1.6.6"
 
+	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+
 }
 compileJava.options.encoding='UTF-8'
 tasks.withType(JavaCompile) {
