remove unused files

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,19 @@
 
 liferay.workspace.modules.dir=modules
 liferay.workspace.themes.dir=themes
-liferay.workspace.wars.dir=modules
-microsoft.translator.subscription.key=
-// liferay.workspace.product=portal-7.4-ga4
+liferay.workspace.wars.dir=wars
 
-liferay.workspace.target.platform.version=7.2-sp5
+#1: dxp-7.4-u1
+#2: dxp-7.3-sp1
+#3: dxp-7.2-sp5
+#4: dxp-7.1-sp7
+#5: dxp-7.0-sp17
+#6: portal-7.4-ga4
+#7: portal-7.3-ga8
+#8: portal-7.2-ga2
+#9: portal-7.1-ga4
+#10: portal-7.0-ga7
+#11: commerce-2.0.7-7.2
+#12: commerce-2.0.7-7.1
 
-liferay.workspace.bundle.url=file:/home/aherbertz/workspace/dgn/support/liferay-dxp-tomcat-7.2.10-dxp-13-slim-20210511104400086.tar.gz
+liferay.workspace.product=portal-7.4-ga4
