--- a/modules/MailServerPortlet/build.gradle
+++ b/modules/MailServerPortlet/build.gradle
@@ -1,20 +1,8 @@
 dependencies {
-	compileOnly 'com.liferay.portal:release.portal.api:7.3.5-ga6'
-
-
+	compileOnly 'com.liferay.portal:release.portal.api'
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
-
-	// compileOnly group: "com.liferay.portal", name: "release.portal.api"
-	// cssBuilder group: "com.liferay", name: "com.liferay.css.builder", version: "3.0.2"
-
-	// compileOnly group: "javax.portlet", name: "portlet-api"
-	// compileOnly group: "javax.servlet", name: "javax.servlet-api"
 	compileOnly group: 'jakarta.mail', name: 'jakarta.mail-api', version: "1.6.6"
 
 	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 
-}
-compileJava.options.encoding='UTF-8'
-tasks.withType(JavaCompile) {
-	options.encoding = 'UTF-8'
 }
