--- a/modules/MailServerPortlet/build.gradle
+++ b/modules/MailServerPortlet/build.gradle
@@ -1,7 +1,9 @@
 dependencies {
-	compileOnly 'com.liferay.portal:release.portal.api'
+	compileOnly group: 'com.liferay.portal', name: 'release.portal.api'
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
 	compileOnly group: 'jakarta.mail', name: 'jakarta.mail-api', version: "1.6.6"
+	compileOnly group: "javax.portlet", name: "portlet-api"
+	compileOnly group: "javax.servlet", name: "javax.servlet-api"
 
 	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 
